added Photon search plugin, updated to leaflet 0.7.3

--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -21,15 +21,14 @@
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <link rel="stylesheet"
-	href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-<link rel="stylesheet" href="L.Control.Locate.css" />
-<!--[if lte IE 8]>
-		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
-		<link rel="stylesheet"	href="L.Control.Locate.ie.css" />
+	href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-		<![endif]-->
-<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+<link rel="stylesheet" href="L.Control.Locate.css" />
 <script type="text/javascript" src="L.Control.Locate.js"></script>
+
+<link rel="stylesheet" href="photon/leaflet.photon.css" />
+<script src="photon/leaflet.photon.js"></script>
 
 <script src="permalink/Permalink.js"></script>
 <script src="permalink/Permalink.Marker.js"></script>
@@ -55,7 +54,7 @@ body {
 .legend img {
 	/*width: 1.7em;*/
 	/*hight: 1.7em:*/
-	
+
 }
 
 html, body, #map {
