added opening hours and atmamp css style file

--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -34,6 +34,7 @@
 <script src="permalink/Permalink.Marker.js"></script>
 <script src="permalink/Permalink.Layer.js"></script>
 
+<link rel="stylesheet" href="atmmap.css" />
 <script type="text/javascript" src="atmmap_layerbuilder.js"></script>
 <script type="text/javascript" src="atmmaputils.js"></script>
 <script type="text/javascript" src="atmmap.js"></script>
