--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -17,8 +17,7 @@
 
 
 <!-- <script type="text/javascript" src="lib/jquery-1.10.2.js"></script>  -->
-<script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
