Updates und ext. Bibliotheken sind nun lokal
- Update auf JQuery 3.1.1
- Update auf Photon-Leaflet-Plugin 0.7 vom 15. Jun. 2015
- Update auf leaflet 1.0.1
- externe Biblotheken sind nun lokal, Ziel: Seite soll über https laufen
- als Version 1.3.1 testweise veröffentlicht

--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 <meta charset="utf-8" />
 
@@ -17,25 +17,26 @@
 
 
 <!-- <script type="text/javascript" src="lib/jquery-1.10.2.js"></script>  -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script	src="./jquery/jquery-3.1.1.min.js"></script>
 
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+<!-- Referenzen: http://webkompetenz.wikidot.com/html-handbuch:referenzierung -->
+<link rel="stylesheet" href="./leaflet/leaflet.css" />
+<script src="./leaflet/leaflet.js"></script>
 
-<link rel="stylesheet" href="L.Control.Locate.css" />
-<script type="text/javascript" src="L.Control.Locate.js"></script>
+<link rel="stylesheet" href="./L.Control.Locate.css" />
+<script type="text/javascript" src="./L.Control.Locate.js"></script>
 
-<link rel="stylesheet" href="photon/leaflet.photon.css" />
-<script src="photon/leaflet.photon.js"></script>
+<link rel="stylesheet" href="./photon/leaflet.photon.css" />
+<script src="./photon/leaflet.photon.js"></script>
 
-<script src="permalink/Permalink.js"></script>
-<script src="permalink/Permalink.Marker.js"></script>
-<script src="permalink/Permalink.Layer.js"></script>
+<script src="./permalink/Permalink.js"></script>
+<script src="./permalink/Permalink.Marker.js"></script>
+<script src="./permalink/Permalink.Layer.js"></script>
 
 <link rel="stylesheet" href="atmmap.css" />
-<script type="text/javascript" src="atmmap_layerbuilder.js"></script>
-<script type="text/javascript" src="atmmaputils.js"></script>
-<script type="text/javascript" src="atmmap.js"></script>
+<script type="text/javascript" src="./atmmap_layerbuilder.js"></script>
+<script type="text/javascript" src="./atmmaputils.js"></script>
+<script type="text/javascript" src="./atmmap.js"></script>
 
 <style type="text/css">
 body {
@@ -54,7 +55,7 @@ body {
 .legend img {
 	/*width: 1.7em;*/
 	/*hight: 1.7em:*/
-
+	
 }
 
 html, body, #map {
