--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -7,7 +7,7 @@
 		Remove this if you use the .htaccess -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-<title>ATM Map</title>
+<title>Geldautomaten finden (ATM Map)</title>
 <meta name="description" content="" />
 <meta name="author" content="Marcus" />
 
@@ -17,7 +17,7 @@
 
 
 <!-- <script type="text/javascript" src="lib/jquery-1.10.2.js"></script>  -->
-<script	src="./jquery/jquery-3.1.1.min.js"></script>
+<script src="./jquery/jquery-3.1.1.min.js"></script>
 
 <!-- Referenzen: http://webkompetenz.wikidot.com/html-handbuch:referenzierung -->
 <link rel="stylesheet" href="./leaflet/leaflet.css" />
@@ -28,6 +28,10 @@
 
 <link rel="stylesheet" href="./photon/leaflet.photon.css" />
 <script src="./photon/leaflet.photon.js"></script>
+
+<script src="./geocoder/js/l.control.geosearch.js"></script>
+<script src="./geocoder/js/l.geosearch.provider.openstreetmap.js"></script>
+<link rel="stylesheet" href="./geocoder/css/l.geosearch.css" />
 
 <script src="./permalink/Permalink.js"></script>
 <script src="./permalink/Permalink.Marker.js"></script>
