Spinner zugefügt, eclipse WebProjekt Eigenschaft angelegt

--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -23,6 +23,9 @@
 <link rel="stylesheet" href="./leaflet/leaflet.css" />
 <script src="./leaflet/leaflet.js"></script>
 
+ <script src="./spin/dist/spin.min.js" charset="utf-8"></script>
+  <script src="./spin/leaflet.spin.min.js" charset="utf-8"></script>
+
 <link rel="stylesheet" href="./L.Control.Locate.css" />
 <script type="text/javascript" src="./L.Control.Locate.js"></script>
 
