Updates und Umzug abgeschlossen

--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -26,8 +26,10 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 <![endif]-->
 <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
 
-<!-- <script src="./spinner/spin.js" charset="utf-8"></script>
-<script src="./spinner/leaflet.spin.js" charset="utf-8"></script> -->
+<script src="./spinner/spin.js" charset="utf-8"></script>
+<script src="./spinner/leaflet.spin.js" charset="utf-8"></script>
+
+<script src="./search/Control.OSMGeocoder.js"></script>
 
 <script src="./permalink/Permalink.js"></script>
 <script src="./permalink/Permalink.Marker.js"></script>
