fixed a bug with spinner, hosting all plugins and libaries local

--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -14,17 +14,13 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 
 <!-- Referenzen: http://webkompetenz.wikidot.com/html-handbuch:referenzierung -->
 	
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./jquery/jquery-3.2.1.min.js"></script>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="./leaflet/leaflet.css" />
+<script src="./leaflet/leaflet.js"></script>
 
-<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.min.js'></script>
-<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.mapbox.css' rel='stylesheet' />
-<!--[if lt IE 9]>
-  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.ie.css' rel='stylesheet' />
-<![endif]-->
-<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
+<link href="./locator/L.Control.Locate.css" rel="stylesheet" />
+<script src="./locator/L.Control.Locate.min.js"></script>
 
 <script src="./spinner/spin.js" charset="utf-8"></script>
 <script src="./spinner/leaflet.spin.js" charset="utf-8"></script>
