--- a/ATM-Map/test/TestRunner.html
+++ b/ATM-Map/test/TestRunner.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="../qunit/qunit-2.4.1.css">
-	<title>Test for ATM-map JavaScripts</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="../qunit/qunit-2.4.1.css">
+<title>Test for ATM-map JavaScripts</title>
 </head>
 <body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="../qunit/qunit-2.4.1.js"></script>
 	<script src="../atmmap_layerbuilder.js"></script>
-	<script src="atm-map-tests.js"></script>
+	<!-- my tests -->
+	<script src="test-cooperative-banks.js"></script>
 </body>
 </html>
