published as alpha version

--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -44,6 +44,7 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 	body {
 		padding: 0;
 		margin: 0;
+		font-family: sans-serif;
 	}
 
 	.legend {
@@ -80,7 +81,8 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 					Auswahl der Banken
 					<span class="sidebar-close"><i class="fa fa-caret-right"></i></span>
 				</h1>
-				<div id="bank_layer_control"></div>
+				<p id="bank_layer_control"></p>
+				<h2 class="sidebar-header">Legende</h2>
 				<table>
 					<tr>
 						<td>Geldautomat:</td>
@@ -117,16 +119,17 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 			</div>
 
 			<div class="sidebar-pane" id="info">
-				<h1 class="sidebar-header">Impressum und Datenschutz<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+				<h1 class="sidebar-header">Impressum, Datenschutz und Copyrigth<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
 				<p>
-					<a href="https://github.com/momolinus/atm-map">Sourcecode der Karte</a>, Version 2.0.0 RC4 (16.12.17)</p>
-				<p style="text-align: center;">
-					<a href="impressum.html">Impressum</a>
+					<a href="https://github.com/momolinus/atm-map">Sourcecode der Karte</a>, Version 3.0.0 RC1 (10.09.2018)</p>
+				<p>
+					<a href="https://marcusbleil.de/impressum-und-datenschutz.html">Impressum und Datenschutz</a>
 				</p>
 				<p>Map data &copy; <a href="http://openstreetmap.org/">OpenStreetMap</a> contributors</p>
 				<p>POIs via <a href="http://www.overpass-api.de/">Overpass API</a></p>
-				<p>Icons by <a href="http://mapicons.nicolasmollet.com/">Nicolas Mollet</a>,	<a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY SA 3.0</a></p>
-			</p>
+				<p>Icons by <a href="http://mapicons.nicolasmollet.com/">Nicolas Mollet</a>, <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+						BY SA 3.0</a></p>
+				</p>
 			</div>
 
 		</div>
