used Komoot photon search

--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -21,6 +21,9 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 <link href="./locator/L.Control.Locate.css" rel="stylesheet" />
 <script src="./locator/L.Control.Locate.min.js"></script>
 
+<link href="./leaflet.photon-0.8.0/leaflet.photon.css" rel="stylesheet" />
+<script src="./leaflet.photon-0.8.0/leaflet.photon.js"></script>
+
 <script src="./spinner/spin.js" charset="utf-8"></script>
 <script src="./spinner/leaflet.spin.js" charset="utf-8"></script>
 
