published as Version 3

--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -26,11 +26,6 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 
 <script src="./search/Control.OSMGeocoder.js"></script>
 
-<script src="./permalink/Permalink.js"></script>
-<script src="./permalink/Permalink.Marker.js"></script>
-<script src="./permalink/Permalink.Layer.js"></script>
-<script src="./permalink/Permalink.Overlay.js"></script>
-
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="./sidebar-v2/leaflet-sidebar.css" />
 <script src="./sidebar-v2/leaflet-sidebar.js"></script>
@@ -127,11 +122,11 @@ Geldutomaten haben; zusätzlich werden Geldautomaten dargestellt,
 			<div class="sidebar-pane" id="copyright">
 				<h1 class="sidebar-header">Impressum, Datenschutz ...<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
 				<p>
-					<a href="https://github.com/momolinus/atm-map">Sourcecode der Karte</a>, Version 3.0.0 RC1 (10.09.2018)</p>
+					<a href="https://github.com/momolinus/atm-map">Sourcecode der Karte</a>, Version 3.0.0 (15.09.2018)</p>
 				<p>
 					<a href="https://marcusbleil.de/impressum-und-datenschutz.html">Impressum und Datenschutz</a>
 				</p>
-				<p>Map data &copy; <a href="http://openstreetmap.org/">OpenStreetMap</a> contributors</p>
+				<p>Map data <a href="https://www.openstreetmap.org/copyright">&copy; OpenStreetMap-Mitwirkende</a></p>
 				<p>POIs via <a href="http://www.overpass-api.de/">Overpass API</a></p>
 				<p>Icons by <a href="http://mapicons.nicolasmollet.com/">Nicolas Mollet</a>, <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
 						BY SA 3.0</a></p>
