--- a/ATM-Map/test/TestRunner.html
+++ b/ATM-Map/test/TestRunner.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="../qunit/qunit-2.4.1.css">
-<title>Test for ATM-map JavaScripts</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="../qunit/qunit-2.4.1.css">
+	<title>Test for ATM-map JavaScripts</title>
 </head>
+
 <body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
+	<script src="../jquery/jquery-3.2.1.min.js"></script>
+
+	<script src="../leaflet/leaflet.js"></script>
+
+	<link href="../locator/L.Control.Locate.css" rel="stylesheet" />
+	<script src="../locator/L.Control.Locate.min.js"></script>
+
+	<script src="../spinner/spin.js" charset="utf-8"></script>
+	<script src="../spinner/leaflet.spin.js" charset="utf-8"></script>
+
+	<script src="../search/Control.OSMGeocoder.js"></script>
+
+	<script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+
+	<script src="../sidebar-v2/leaflet-sidebar.js"></script>
+
 	<script src="../qunit/qunit-2.4.1.js"></script>
 	<script src="../atmmap_layerbuilder.js"></script>
+	<script src="../atmmaputils.js"></script>
+	<script src="../atmmap.js"></script>
+
 	<!-- my tests -->
 	<script src="test-cooperative-banks.js"></script>
+	<script src="test-atmmap.js"></script>
 </body>
+
 </html>
