--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -119,7 +119,7 @@ Geldautomaten haben; zusätzlich werden Geldautomaten dargestellt,
 				</h1>
 				<p>
 					<a href="https://github.com/momolinus/atm-map">Sourcecode der
-						Karte</a>, Version 4.0.0 (02.02.2021)
+						Karte</a>, Version 5.0 RC1 (31.03.2023)
 				</p>
 				<p>
 					<a href="https://marcusbleil.de/impressum-und-datenschutz.html">Impressum
