--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html lang="de">
 
-<meta charset="utf-8" />
-<title>Geldautomaten finden (ATM Map)</title>
-<meta name="description" content="diese Karte stellt dar, ob Banken einen 
+<head>
+	<meta charset="utf-8" />
+	<title>Geldautomaten finden (ATM Map)</title>
+	<meta name="description" content="diese Karte stellt dar, ob Banken einen 
 Geldautomaten haben; zusätzlich werden Geldautomaten dargestellt,
  die an anderen Orten als Banken stehen" />
-<meta name="author" content="Marcus Bleil" />
+	<meta name="author" content="Marcus Bleil" />
 
-<!-- for mobile devices -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<!-- for mobile devices -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-<!-- Referenzen: http://webkompetenz.wikidot.com/html-handbuch:referenzierung -->
+	<!-- Referenzen: http://webkompetenz.wikidot.com/html-handbuch:referenzierung -->
 
-<script src="./jquery/jquery-3.2.1.min.js"></script>
+	<script src="./jquery/jquery-3.2.1.min.js"></script>
 
-<script src="./leaflet/leaflet.js"></script>
+	<script src="./leaflet/leaflet.js"></script>
 
-<link href="./locator/L.Control.Locate.css" rel="stylesheet" />
-<script src="./locator/L.Control.Locate.min.js"></script>
+	<link href="./locator/L.Control.Locate.css" rel="stylesheet" />
+	<script src="./locator/L.Control.Locate.min.js"></script>
 
-<script src="./spinner/spin.js" charset="utf-8"></script>
-<script src="./spinner/leaflet.spin.js" charset="utf-8"></script>
+	<script src="./spinner/spin.js" charset="utf-8"></script>
+	<script src="./spinner/leaflet.spin.js" charset="utf-8"></script>
 
-<script src="./search/Control.OSMGeocoder.js"></script>
+	<script src="./search/Control.OSMGeocoder.js"></script>
 
-<script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+	<script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
 
-<script src="./sidebar-v2/leaflet-sidebar.js"></script>
+	<script src="./sidebar-v2/leaflet-sidebar.js"></script>
 
-<script src="./atmmap_layerbuilder.js"></script>
-<script src="./atmmaputils.js"></script>
-<script src="./atmmap.js"></script>
+	<script src="./atmmap_layerbuilder.js"></script>
+	<script src="./atmmaputils.js"></script>
+	<script src="./atmmap.js"></script>
 
-<link rel="stylesheet" href="./leaflet/leaflet.css" />
-<link rel="stylesheet" href="atmmap.css" />
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./sidebar-v2/leaflet-sidebar.css" />
-<style type="text/css">
-	body {
-		padding: 0;
-		margin: 0;
-		font-family: sans-serif;
-	}
+	<link rel="stylesheet" href="./leaflet/leaflet.css" />
+	<link rel="stylesheet" href="atmmap.css" />
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="./sidebar-v2/leaflet-sidebar.css" />
+	<style type="text/css">
+		body {
+			padding: 0;
+			margin: 0;
+			font-family: sans-serif;
+		}
 
-	.legend {
-		font-size: small;
-		border-radius: 5px;
-		box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
-		background-color: white;
-		padding: 6px 10px 6px 6px;
-	}
+		.legend {
+			font-size: small;
+			border-radius: 5px;
+			box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
+			background-color: white;
+			padding: 6px 10px 6px 6px;
+		}
 
-	html,
-	body,
-	#map {
-		height: 100%;
-	}
-</style>
+		html,
+		body,
+		#map {
+			height: 100%;
+		}
+	</style>
+</head>
 
 <body>
 	<div id="sidebar" class="sidebar collapsed" style="margin-bottom: 1em;">
