update jquery to 3.7.0

--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -14,7 +14,7 @@ Geldautomaten haben; zusätzlich werden Geldautomaten dargestellt,
 
 	<!-- Referenzen: http://webkompetenz.wikidot.com/html-handbuch:referenzierung -->
 
-	<script src="./jquery/jquery-3.2.1.min.js"></script>
+	<script src="./jquery/jquery-3.7.0.min.js"></script>
 
 	<script src="./leaflet/leaflet.js"></script>
 
@@ -124,7 +124,7 @@ Geldautomaten haben; zusätzlich werden Geldautomaten dargestellt,
 						Karte</a>, Version 5.0 RC1 (31.03.2023)
 				</p>
 				<p>
-					<a href="https://marcusbleil.de/impressum-und-datenschutz.html">Impressum
+					<a href="impressum.html">Impressum
 						und Datenschutz</a>
 				</p>
 				<p>
