no using LatLngBounds instead of bounds for intelligent search

--- a/ATM-Map/test/TestRunner.html
+++ b/ATM-Map/test/TestRunner.html
@@ -35,6 +35,7 @@
 	<!-- my tests -->
 	<script src="test-cooperative-banks.js"></script>
 	<script src="test-atmmap.js"></script>
+	<script src="test-atmmaputils.js"></script>
 </body>
 
 </html>
