published Version 5.0 RC2

--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Geldautomaten finden (ATM Map)</title>
-	<meta name="description" content="diese Karte stellt dar, ob Banken einen 
-Geldautomaten haben; zusätzlich werden Geldautomaten dargestellt,
- die an anderen Orten als Banken stehen" />
+	<meta name="description" content="Diese Karte stellt dar, ob Banken einen 
+Geldautomaten haben. Zusätzlich werden Geldautomaten dargestellt,
+ die an anderen Orten als Banken stehen." />
 	<meta name="author" content="Marcus Bleil" />
 
 	<!-- for mobile devices -->
@@ -119,7 +119,7 @@ Geldautomaten haben; zusätzlich werden Geldautomaten dargestellt,
 				</h1>
 				<p>
 					<a href="https://github.com/momolinus/atm-map">Sourcecode der
-						Karte</a>, Version 5.0 RC1 (31.03.2023)
+						Karte</a>, Version 5.0 RC2 (07.07.2023)
 				</p>
 				<p>
 					<a href="impressum.html">Impressum
