--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -119,7 +119,7 @@ Geldautomaten haben. Zusätzlich werden Geldautomaten dargestellt,
 				</h1>
 				<p>
 					<a href="https://github.com/momolinus/atm-map">Sourcecode der
-						Karte</a>, Version 5.0 RC2 (07.07.2023)
+						Karte</a>, Version 5.0 RC3 (09.07.2023)
 				</p>
 				<p>
 					<a href="impressum.html">Impressum
@@ -136,6 +136,9 @@ Geldautomaten haben. Zusätzlich werden Geldautomaten dargestellt,
 					Icons by <a href="http://mapicons.nicolasmollet.com/">Nicolas
 						Mollet</a>, <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
 						BY SA 3.0</a>
+				</p>
+				<p>
+					Geldautomaten-WMS-Service von <a href="http://rudzick.de/">Oliver Rudzik</a>
 				</p>
 
 			</div>
