--- a/ATM-Map/index.html
+++ b/ATM-Map/index.html
@@ -119,7 +119,7 @@ Geldautomaten haben. Zusätzlich werden Geldautomaten dargestellt,
 				</h1>
 				<p>
 					<a href="https://github.com/momolinus/atm-map">Sourcecode der
-						Karte</a>, Version 5.0 RC3 (09.07.2023)
+						Karte</a>, Version 5.0 (16.07.2023)
 				</p>
 				<p>
 					<a href="impressum.html">Impressum
